# potassium

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: publish-docker.yml
backend/: README.md  pyproject.toml
backend/docker/: Dockerfile
backend/potassium/: app.py  dependencies.py  scheduler.py
backend/potassium/api/: router.py  scheduler.py  signals.py
backend/potassium/config/: settings.py
backend/potassium/config/secrets/: aws.py  k8s.py  secret.py  settings.py
backend/potassium/database/: engine.py
backend/potassium/debezium/: client.py  exceptions.py  models.py
backend/potassium/kafka/: client.py
backend/potassium/utils/: logs.py
backend/tests/: __init__.py  conftest.py  helpers.py
backend/tests/config/secrets/: test_secrets.py
backend/tests/fixtures/: potassium-setup.yaml
