[project]
name = "potassium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apprise>=1.9.3",
    "apscheduler>=3.11.0",
    "boto3>=1.38.30",
    "boto3-stubs[secretsmanager]>=1.38.30",
    "click>=8.2.1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "kafka-python>=2.2.11",
    "kubernetes>=32.0.1",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
    "moto[secretsmanager]>=5.1.5",
    "poethepoet>=0.35.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-env>=1.1.5",
    "pytest-kubernetes>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-p no:warnings"
testpaths = ["tests"]
env = [
    "AWS_REGION=us-east-1",
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["call-arg", "import-untyped"]
files = [
    "potassium/*.py",
    "tests/*.py",
]


[tool.poe.tasks]
potassium = "uvicorn potassium.app:app --host 0.0.0.0 --port 80"
potassium_dev = "uvicorn potassium.app:app --host 0.0.0.0 --port 80 --reload"
